--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.navlink {
+    padding: 2px 8px;
+    border-bottom: 2px solid transparent;  
+    border-radius: 5px;
+}
+.active .navlink {
+    border-bottom: 2px solid #fe3938;
+}
