[upd]:[LogIn.jsx, Register.jsx]:Login and register page design has completed

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
     padding: 2px 8px;
     border-bottom: 2px solid transparent;  
     border-radius: 5px;
+    width: max-content;
 }
 .active .navlink {
     border-bottom: 2px solid #fe3938;
